--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
     <head>
         <meta charset="utf-8">
-        <title>BCS</title>
+        <title>Better Call Saul</title>
         <link rel="stylesheet" href="css/stylesheet.css">
     </head>
     <body>
